--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "description": "New Swagger API Project",
   "keywords": [],
-  "author": "",
-  "license": "",
+  "author": "Ray Vafa",
+  "license": "ISC",
   "main": "app.js",
   "dependencies": {
     "express": "^4.12.3",
